seconf commit, flask not working

--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -175,7 +175,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/spaceimages/images/largesize/PIA18185_hires.jpg\n"
+      "/spaceimages/images/largesize/PIA19343_hires.jpg\n"
      ]
     }
    ],
@@ -194,7 +194,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://www.jpl.nasa.gov/spaceimages/images/largesize/PIA18185_hires.jpg\n"
+      "https://www.jpl.nasa.gov/spaceimages/images/largesize/PIA19343_hires.jpg\n"
      ]
     }
    ],
@@ -232,7 +232,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://www.nasa.gov/press-release/goddard/2019/mars-proton-aurora-common/ …\n"
+      "InSight sol 370 (2019-12-11) low -99.0ºC (-146.1ºF) high -19.5ºC (-3.0ºF)\n",
+      "winds from the SSE at 5.1 m/s (11.4 mph) gusting to 19.6 m/s (43.9 mph)\n",
+      "pressure at 6.60 hPapic.twitter.com/XqOy8yFlI6\n"
      ]
     }
    ],
@@ -258,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +351,7 @@
        "8          Recorded By:           Egyptian astronomers"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
